--- a/Guide_sign_mapping/Base.lproj/Main.storyboard
+++ b/Guide_sign_mapping/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <!--SelectLandmarkVC-->
         <scene sceneID="W7l-o0-ckW">
             <objects>
-                <viewController storyboardIdentifier="SelectLandmarkVC" title="SelectLandmarkVC" id="pan-J3-R78" customClass="SelectLandmarkViewController" customModule="Guide_sign_mapping" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SelectGenreVC" title="SelectLandmarkVC" id="pan-J3-R78" customClass="SelectGenreViewController" customModule="Guide_sign_mapping" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="0wO-ay-Dyr">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -30,8 +30,8 @@
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
-                                    <outlet property="dataSource" destination="pan-J3-R78" id="7ym-v1-xiK"/>
-                                    <outlet property="delegate" destination="pan-J3-R78" id="3fT-nO-UWt"/>
+                                    <outlet property="dataSource" destination="pan-J3-R78" id="nEw-mf-bdD"/>
+                                    <outlet property="delegate" destination="pan-J3-R78" id="AAD-oa-ZHX"/>
                                 </connections>
                             </tableView>
                         </subviews>
@@ -41,12 +41,53 @@
                     <tabBarItem key="tabBarItem" title="Item" id="Nsf-Wn-kfh"/>
                     <navigationItem key="navigationItem" title="観光施設選択" id="RGj-gc-z35"/>
                     <connections>
-                        <segue destination="BV1-FR-VrT" kind="show" identifier="toLandmarkViewController" id="sLN-Wv-sWA"/>
+                        <segue destination="yxm-oB-SYo" kind="show" identifier="toSelectLandmarkInGenreVC" id="SeO-AS-CIy"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="S17-Xm-t2V" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-729" y="-1289"/>
+        </scene>
+        <!--Select Landmark In Genre View Controller-->
+        <scene sceneID="k1p-DK-KVX">
+            <objects>
+                <viewController id="yxm-oB-SYo" customClass="SelectLandmarkInGenreViewController" customModule="Guide_sign_mapping" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="IPo-oL-AMD">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ieS-zt-ZYd">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="z8W-CA-wkz">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="z8W-CA-wkz" id="s3M-lu-efg">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="yxm-oB-SYo" id="8cR-1s-Gu1"/>
+                                    <outlet property="delegate" destination="yxm-oB-SYo" id="OJf-mr-9Jb"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="E0o-3Y-bZV"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="6JE-0b-zcC"/>
+                    <connections>
+                        <outlet property="TableView" destination="ieS-zt-ZYd" id="uNh-yc-V2P"/>
+                        <segue destination="BV1-FR-VrT" kind="show" identifier="toLandmarkVC" id="TGf-Ma-3m4"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="W9i-tk-cfE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="772.46376811594212" y="-1293.0803571428571"/>
         </scene>
         <!--エリア選択-->
         <scene sceneID="wPg-Da-4nh">
@@ -165,13 +206,56 @@
                     </view>
                     <navigationItem key="navigationItem" id="x3I-w8-c9A"/>
                     <connections>
+                        <outlet property="NB_title" destination="x3I-w8-c9A" id="wMu-Hm-J7t"/>
                         <outlet property="TableView" destination="CTJ-9G-yCo" id="xdy-5S-RO6"/>
-                        <segue destination="voE-MI-Rp5" kind="show" id="Emx-ym-vR3"/>
+                        <segue destination="OUl-lC-w2Q" kind="show" identifier="toSLIGIAVC" id="lXE-xv-cM6"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Igc-2i-GVO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1324.6376811594205" y="-2861.3839285714284"/>
+        </scene>
+        <!--Select Landmark In Genre In Area View Controller-->
+        <scene sceneID="9MQ-wh-dAn">
+            <objects>
+                <viewController id="OUl-lC-w2Q" customClass="SelectLandmarkInGenreInAreaViewController" customModule="Guide_sign_mapping" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Myx-OS-hMP">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="xfQ-Za-RDb">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="bUb-fM-jla">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="bUb-fM-jla" id="iqQ-g1-iZv">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="OUl-lC-w2Q" id="Swu-vQ-5Yz"/>
+                                    <outlet property="delegate" destination="OUl-lC-w2Q" id="WWo-lj-l3N"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="4dc-Fr-AiA"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="loe-X2-ypZ"/>
+                    <connections>
+                        <outlet property="NB_title" destination="loe-X2-ypZ" id="6mh-il-RfZ"/>
+                        <outlet property="TableView" destination="xfQ-Za-RDb" id="E2f-Bj-5hD"/>
+                        <segue destination="voE-MI-Rp5" kind="show" identifier="toFacilitiesVC" id="8Wg-e3-suY"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lla-pi-LfH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2236.231884057971" y="-2864.0625"/>
         </scene>
         <!--ARオブジェクト表示-->
         <scene sceneID="SeO-1k-Tif">
@@ -248,7 +332,7 @@
                     </navigationItem>
                     <connections>
                         <segue destination="NaI-7h-VLb" kind="show" identifier="toPictgramsViewController" id="DrP-ok-UcE"/>
-                        <segue destination="pan-J3-R78" kind="show" identifier="toSelectLandmarksVC" id="CAT-SU-fJE"/>
+                        <segue destination="pan-J3-R78" kind="show" identifier="toSelectGenreVC" id="CAT-SU-fJE"/>
                         <segue destination="RTZ-3b-01M" kind="show" identifier="toSearchAreaVC" id="Nqo-l0-Qkq"/>
                     </connections>
                 </viewController>
@@ -481,6 +565,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="Emx-ym-vR3"/>
+        <segue reference="8Wg-e3-suY"/>
     </inferredMetricsTieBreakers>
 </document>
